# sentinel

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  DEMO.md  Makefile  Makefile.bak  PHASE2_README.txt  PHASE3_README.txt  README-LLM.md  README.md  README.txt  ci_policy.yml  docker-compose.yml  pasted.txt
.github/workflows/: fixture-e2e.yml  sentinel-scan.yml
apps/demo_server/: CMakeLists.txt  main.cpp
apps/demo_server/fixtures/: findings.demo.jsonl  poe_prompt.sample.json
apps/llm/: CMakeLists.txt  README-LLM.md  main.cpp
apps/reporter_stub/: main.cpp
artifacts/: scan_results.json  scan_results.jsonl
config/: auth_config.yaml  directories.yaml  llm.yaml  payloads.yaml  policy.yaml  response_patterns.yaml  scanner.yaml
docker/: nginx.conf
docker/certs/: fullchain.pem  privkey.pem
docs/: PHASE3_README.txt  README.md
reports/: sentinel_report.html
schema/: crawl_result.h  finding.h
src/: main.cpp  reporter_stub.cpp  sentinel_llm.cpp
src/artifacts/: artifacts.cpp  artifacts.h  vuln_engine.cpp  vuln_engine.h
src/budget/: policy.cpp  policy.h
src/core/: baseline_comparator.cpp  baseline_comparator.h  crawler.cpp  crawler.h  discovery.cpp  discovery.h  http_client.cpp  http_client.h  response_analyzer.cpp  response_analyzer.h  session_manager.cpp  session_manager.h  timing_analyzer.cpp  timing_analyzer.h  vuln_engine.cpp  vuln_engine.h
src/llm/: ollama_client.h  poe_renderer.h  prompt_templates.h
src/logging/: chain.cpp  chain.h
tests/: main_llm.cpp  main_ollama_client.cpp  main_poe_renderer.cpp  test_artifacts.cpp  test_baseline_comparator.cpp  test_budget.cpp  test_chain.cpp  test_chain_tamper.cpp  test_command_injection.cpp  test_directory_listing.cpp  test_http_method_vulnerabilities.cpp  test_idor.cpp  test_information_disclosure.cpp  test_ollama_client.cpp  test_open_redirect.cpp  test_path_traversal.cpp  test_poe_renderer.cpp  test_response_analyzer.cpp  test_sensitive_data_exposure.cpp  test_session_manager.cpp  test_sql_injection.cpp  test_ssrf.cpp  test_ssti.cpp  test_timing_analyzer.cpp  test_xxe.cpp
tests/helpers/: http_test_helpers.cpp  http_test_helpers.h
tools/: check_demo.sh  full_demo.sh  full_tests.sh  gen-selfsigned.sh  install_dependencies.sh  lib.sh  llm_demo.sh  repo_tree  repo_tree.c  repo_tree_ignore  repo_tree_ignore.c  sentinel_validate.cpp
tools/tf_safety_scorer/: safety_scorer.py
vibe/: PHASE4_IMPLEMENTATION.md  VULNERABILITY_ANALYSIS.md  secure_coding_extracted.txt
